--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   frontend:
     build:
@@ -11,6 +10,8 @@ services:
     environment:
       VUE_APP_API_URL: http://backend:8080
     container_name: taskmaster-frontend
+    networks:
+      - app-network
 
   backend:
     build:
@@ -18,21 +19,21 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
-    environment:
-      PORT: 8080
+    env_file:
+      - ./.env
     depends_on:
       - db
     container_name: taskmaster-backend
+    networks:
+      - app-network
   
   db:
     image: postgres:17-alpine
     restart: always
     ports:
-      - "5432:5432"  # 127.0.0.1:5432:5432
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      - "127.0.0.1:5432:5432"  # 127.0.0.1:5432:5432
+    env_file:
+      - ./.env
     volumes:
       - taskmaster_v2_db_data:/var/lib/postgresql/data
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -42,6 +43,12 @@ services:
       timeout: 5s
       retries: 5
     container_name: taskmaster-db
+    networks:
+      - app-network
+  
+networks:
+  app-network:
+    driver: bridge
   
 volumes:
   taskmaster_v2_db_data:
