rework docker compose, added redis, added test requests to redis, fix error handling on frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   frontend:
+    container_name: tm2-frontend
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -9,11 +10,11 @@ services:
       - backend
     environment:
       VUE_APP_API_URL: http://backend:8080
-    container_name: taskmaster-frontend
     networks:
       - app-network
 
   backend:
+    container_name: tm2-backend
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -22,16 +23,17 @@ services:
     env_file:
       - ./.env
     depends_on:
-      - db
-    container_name: taskmaster-backend
+      - postgres
+      - redis
     networks:
       - app-network
   
-  db:
+  postgres:
+    container_name: tm2-postgres
     image: postgres:17-alpine
     restart: always
     ports:
-      - "127.0.0.1:5432:5432"  # 127.0.0.1:5432:5432
+      - "5432:5432"  # 127.0.0.1:5432:5432
     env_file:
       - ./.env
     volumes:
@@ -42,10 +44,48 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    container_name: taskmaster-db
     networks:
       - app-network
   
+  redis:
+    container_name: tm2-redis
+    image: redis:latest
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_USER=${REDIS_USER}
+      - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
+    ports:
+      - "6380:6379"
+    volumes:
+      - ./redisdata:/data
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
+    command: >
+      sh -c '
+        mkdir -p /usr/local/etc/redis &&
+        echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
+        echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
+        echo "user default on nopass ~* +@all" > /usr/local/etc/redis/users.acl &&
+        echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
+        redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
+      '
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "$REDIS_PASSWORD", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    restart: unless-stopped
+    tty: true
+    stdin_open: true
+
 networks:
   app-network:
     driver: bridge
