--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0"
   },
