added update user email and update user fio routes, fixed network for redis in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,8 @@ services:
     restart: unless-stopped
     tty: true
     stdin_open: true
+    networks:
+      - app-network
 
 networks:
   app-network:
