--- a/backend_new/package.json
+++ b/backend_new/package.json
@@ -32,7 +32,8 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0",
     "rimraf": "^6.0.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
