--- a/backend_new/package.json
+++ b/backend_new/package.json
@@ -22,6 +22,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^24.0.0",
     "@types/pg": "^8.15.4",
+    "@types/ua-parser-js": "^0.7.39",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -33,6 +34,7 @@
     "pg": "^8.16.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.8.3",
+    "ua-parser-js": "^2.0.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
